force-app/main/default/objects/Equipment_Alert__c/Equipment_Alert__c.object-meta.xml
<CustomObject>
    <label>設備アラート</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>アラート番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>設備アラート</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>