force-app/main/default/objects/Equipment_Alert__c/fields/Anomaly_Description__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Description__c</fullName>
    <label>AI診断</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>