force-app/main/default/objects/Equipment_Alert__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>納入設備</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>設備アラート</relationshipLabel>
    <relationshipName>Equipment_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>