force-app/main/default/objects/Equipment_Alert__c/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <label>検知日時</label>
    <type>DateTime</type>
</CustomField>