force-app/main/default/objects/Equipment_Alert__c/fields/Detected_Value__c.field-meta.xml
<CustomField>
    <fullName>Detected_Value__c</fullName>
    <label>検知値</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>