force-app/main/default/objects/Equipment_Alert__c/fields/Estimated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opportunity__c</fullName>
    <label>想定商談機会</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>