force-app/main/default/objects/Equipment_Alert__c/fields/GcpRequestId__c.field-meta.xml
<CustomField>
    <fullName>GcpRequestId__c</fullName>
    <label>GCPリクエストID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>