force-app/main/default/objects/Equipment_Alert__c/fields/Opportunity_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rationale__c</fullName>
    <label>商談機会算出根拠</label>
    <length>255</length>
    <type>Text</type>
</CustomField>