force-app/main/default/objects/Equipment_Alert__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>推奨アクション</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>