force-app/main/default/objects/Equipment_Alert__c/fields/Sensor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Type__c</fullName>
    <label>センサー種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>セル温度</fullName>
                <default>true</default>
                <label>セル温度</label>
            </value>
            <value>
                <fullName>振動</fullName>
            </value>
            <value>
                <fullName>充電サイクル</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>