force-app/main/default/objects/Equipment_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
                <default>true</default>
                <label>新規</label>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>解決済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>