force-app/main/default/objects/Equipment_Alert__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>閾値</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>